[package]
name = "zip-util"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasm-bindgen = "0.2.83"
console_error_panic_hook = "0.1"
path-clean = "0.1"
zip = { version = "0.6", features = ["deflate"], default-features = false }
